# tuilog

./: .gitignore  AGENTS.md  Cargo.toml  README.md  example.txt  flake.nix  refactor_gpui.md
.github/workflows/: release.yml
.zed/: debug.json
src/: app.rs  constants.rs  filter.rs  highlight.rs  input.rs  main.rs  netinfo.rs  source.rs  state.rs  ui.rs
src/core/: filter_state.rs  log_state.rs  mod.rs
src/gui/: app.rs  components.rs  gpui_app.rs  gpui_state.rs  gpui_text_input.rs  mod.rs  state.rs  style.rs
src/tui/: mod.rs
