[package]
name = "logviewer"
version = "0.11.0"
edition = "2021"
description = "A terminal-based log viewer"
repository = "https://github.com/SuperKenVery/tuilog"
license = "GPL-3.0-only"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[features]
default = ["gui"]
gui = ["dioxus", "dioxus-native", "async-std", "async-channel"]

[dependencies]
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
regex = "1"
fancy-regex = "0.14"
notify = "7"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.29", features = ["net"] }
socket2 = "0.5"
dioxus = { version = "0.7.2", optional = true, features = ["desktop"] }
dioxus-native = { version = "0.7", optional = true }
async-std = { version = "1.12", optional = true }
async-channel = { version = "2", optional = true }
tracing = "0.1.44"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock", "Win32_NetworkManagement_Ndis"] }
