[package]
name = "logviewer"
version = "0.11.0"
edition = "2021"
description = "A terminal-based log viewer"
repository = "https://github.com/SuperKenVery/tuilog"
license = "GPL-3.0-only"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[features]
default = ["gui", "gpui_gui"]
gui = []
gpui_gui = ["gpui", "unicode-segmentation"]

[dependencies]
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
regex = "1"
fancy-regex = "0.14"
notify = "7"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.29", features = ["net"] }
socket2 = "0.5"
tracing = "0.1.44"
gpui = { path = "/Users/bytedance/Projects/Zed/zed/crates/gpui", optional = true }
unicode-segmentation = { version = "1", optional = true }
 
[patch.crates-io]
core-graphics = { path = "/Users/bytedance/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/core-graphics-0.24.0" }
core-text = { path = "/Users/bytedance/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/core-text-21.0.0" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock", "Win32_NetworkManagement_Ndis"] }
